--- a/PhoneShop/PhoneShop/Views/Product/Index.cshtml
+++ b/PhoneShop/PhoneShop/Views/Product/Index.cshtml
@@ -25,6 +25,7 @@
 </section>
 
 <script>
+    //按下相關功能按鈕後，畫面移動
     function focusAction(controlToFocus) {
         $('html, body').animate({
             scrollTop: $("#" + controlToFocus).offset().top - 100
