修改訂單下訂時間格式

--- a/PhoneShop/PhoneShop/Views/Order/OrderTable.cshtml
+++ b/PhoneShop/PhoneShop/Views/Order/OrderTable.cshtml
@@ -18,7 +18,7 @@
                 {
                     <tr>
                         <td>@order.UserID</td>
-                        <td>@order.OrderTime</td>
+                        <td>@order.OrderTime.ToString("yyyy-MM-dd HH:mm:ss")</td>
                         <td>@order.TotalAmount</td>
                         <td>@order.Status</td>
                         <td>
